<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray5"
    android:gravity="center"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="50dp"
        android:layout_height="50dp" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/contentNestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--群成员头像列表（5列）-->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/memberRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingLeft="7dp"
                android:paddingTop="15dp"
                android:paddingRight="7dp"
                android:paddingBottom="5dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="5" />

            <Button
                android:id="@+id/showAllMemberButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/selector_common_item"
                android:gravity="center"
                android:text="查看全部成员"
                android:textSize="15sp"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/groupLinearLayout_0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/option_item_margin_top"
                android:background="@color/white"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="visible">

                <cn.wildfire.chat.kit.widget.OptionItemView
                    android:id="@+id/groupNameOptionItemView"
                    style="@style/OptionItem"
                    android:background="@drawable/selector_option_item"
                    app:desc="@string/untitled"
                    app:title="@string/group_name" />

                <cn.wildfire.chat.kit.widget.OptionItemView
                    android:id="@+id/groupQRCodeOptionItemView"
                    style="@style/OptionItem"
                    android:background="@drawable/selector_option_item"
                    app:title="二维码" />

                <View
                    style="@style/Line"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp" />

                <LinearLayout
                    android:id="@+id/groupNoticeLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/option_item_margin_left"
                        android:layout_weight="1"
                        android:text="@string/group_announcement"
                        android:textColor="@color/black0"
                        android:textSize="16sp" />


                    <TextView
                        android:id="@+id/groupNoticeTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="25dp"
                        android:layout_marginBottom="5dp"
                        android:text=""
                        android:textColor="@color/gray2"
                        android:textSize="14sp"
                        android:visibility="visible"
                        tools:text="群公告"
                        tools:visibility="visible" />

                </LinearLayout>

                <View
                    android:id="@+id/groupManageDividerLine"
                    style="@style/Line"
                    android:layout_marginLeft="@dimen/option_item_margin_left"
                    android:layout_marginRight="@dimen/option_item_margin_right"
                    android:visibility="visible" />

                <cn.wildfire.chat.kit.widget.OptionItemView
                    android:id="@+id/groupManageOptionItemView"
                    style="@style/OptionItem"
                    android:background="@drawable/selector_option_item"
                    android:visibility="gone"
                    app:title="群管理" />
            </LinearLayout>


            <cn.wildfire.chat.kit.widget.OptionItemView
                android:id="@+id/searchMessageOptionItemView"
                style="@style/OptionItem"
                android:layout_marginTop="@dimen/option_item_margin_top"
                android:background="@drawable/selector_option_item"
                app:title="查找聊天记录" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/option_item_margin_top"
                android:background="@color/white"
                android:orientation="vertical"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_weight="1"
                        android:text="@string/message_free"
                        android:textColor="@color/black0"
                        android:textSize="16sp" />

                    <com.kyleduo.switchbutton.SwitchButton
                        android:id="@+id/silentSwitchButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/option_item_margin_right"
                        app:kswBackDrawable="@drawable/ios_back_drawable"
                        app:kswBackMeasureRatio="1.8"
                        app:kswThumbDrawable="@drawable/ios_thumb_selector"
                        app:kswThumbMarginBottom="-4dp"
                        app:kswThumbMarginLeft="-2dp"
                        app:kswThumbMarginRight="-2dp"
                        app:kswThumbMarginTop="-0dp"
                        app:kswThumbWidth="10dp" />
                </LinearLayout>

                <View
                    style="@style/Line"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_weight="1"
                        android:text="@string/set_conversation_to_top"
                        android:textColor="@color/black0"
                        android:textSize="16sp" />

                    <com.kyleduo.switchbutton.SwitchButton
                        android:id="@+id/stickTopSwitchButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/option_item_margin_right"
                        app:kswBackDrawable="@drawable/ios_back_drawable"
                        app:kswBackMeasureRatio="1.8"
                        app:kswThumbDrawable="@drawable/ios_thumb_selector"
                        app:kswThumbMarginBottom="-4dp"
                        app:kswThumbMarginLeft="-2dp"
                        app:kswThumbMarginRight="-2dp"
                        app:kswThumbMarginTop="-0dp"
                        app:kswThumbWidth="10dp" />
                </LinearLayout>

                <View
                    style="@style/Line"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp" />

                <LinearLayout
                    android:id="@+id/markGroupLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:gravity="center_vertical"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_weight="1"
                        android:text="保存到通讯录"
                        android:textColor="@color/black0"
                        android:textSize="16sp" />

                    <com.kyleduo.switchbutton.SwitchButton
                        android:id="@+id/markGroupSwitchButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="15dp"
                        app:kswBackDrawable="@drawable/ios_back_drawable"
                        app:kswBackMeasureRatio="1.8"
                        app:kswThumbDrawable="@drawable/ios_thumb_selector"
                        app:kswThumbMarginBottom="-4dp"
                        app:kswThumbMarginLeft="-2dp"
                        app:kswThumbMarginRight="-2dp"
                        app:kswThumbMarginTop="-0dp"
                        app:kswThumbWidth="10dp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/groupLinearLayout_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/option_item_margin_top"
                android:background="@color/white"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="visible">

                <cn.wildfire.chat.kit.widget.OptionItemView
                    android:id="@+id/myGroupNickNameOptionItemView"
                    style="@style/OptionItem"
                    android:background="@drawable/selector_option_item"
                    app:title="@string/my_nickname_in_this_group" />


                <View
                    style="@style/Line"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/selector_option_item"
                    android:gravity="center_vertical"
                    android:visibility="visible">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_weight="1"
                        android:text="@string/show_group_member_name"
                        android:textColor="@color/black0"
                        android:textSize="16sp" />

                    <com.kyleduo.switchbutton.SwitchButton
                        android:id="@+id/showGroupMemberAliasSwitchButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/option_item_margin_right"
                        android:clickable="true"
                        app:kswBackDrawable="@drawable/ios_back_drawable"
                        app:kswBackMeasureRatio="1.8"
                        app:kswThumbDrawable="@drawable/ios_thumb_selector"
                        app:kswThumbMarginBottom="-4dp"
                        app:kswThumbMarginLeft="-2dp"
                        app:kswThumbMarginRight="-2dp"
                        app:kswThumbMarginTop="-0dp"
                        app:kswThumbWidth="10dp" />
                </LinearLayout>

            </LinearLayout>

            <cn.wildfire.chat.kit.widget.OptionItemView
                android:id="@+id/clearMessagesOptionItemView"
                style="@style/OptionItem"
                android:layout_marginTop="@dimen/option_item_margin_top"
                android:background="@drawable/selector_option_item"
                app:title="@string/clear_chat_log" />

            <Button
                android:id="@+id/quitButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="@dimen/option_item_margin_left"
                android:layout_marginTop="@dimen/option_item_margin_top"
                android:layout_marginRight="@dimen/option_item_margin_right"
                android:layout_marginBottom="20dp"
                android:background="@drawable/shape_btn_delete"
                android:text="@string/delete_and_exit"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:visibility="gone"
                tools:visibility="visible" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>